<resources>
    <string name="app_name">Gerany</string>
    <string name="facebook_application_id" translatable="false">159070707994934</string>
    <string name="no_internet">There is no internet connection.</string>
    <string name="unknown_error">Unknown error occur, please try again later.</string>
    <string name="title_activity_test">testActivity</string>
    <string name="title_home">Home</string>
    <string name="title_post">New Post</string>
    <string name="title_places">My Places</string>
    <string name="title_add_place">New Place</string>
    <string name="title_profile">Profile</string>
    <string name="settings_title">Settings</string>
    <string name="add_new_place_text">Do you like to add your current place to your places list?</string>
    <string name="no_signal_message">There is no internet connection :(</string>
    <string name="current_place_exist">Your current place in your places list</string>
    <string name="name_your_place">Do you like to give a name to your place? You can change it later.</string>
    <string name="place_added">Your place has been added successfully!</string>
    <string name="add_new_place_button">Add To My Places</string>
    <string name="post_text_error_message">Please enter post text.</string>
    <string name="add_post_holder">Share an article, photo or idea</string>
    <string name="post">POST</string>
    <string name="post_button_description">post button</string>
    <string name="animate_add_location">add_location_animation</string>
    <string name="post_note">NOTE: This post will share in %s</string>
    <string-array name="camera">
        <item>Take a photo</item>
        <item>Choose a photo from the gallery</item>
    </string-array>
    <string name="edit_location_dialog_header">Edit Places</string>
    <string name="edit_location_dialog_description">Rename the current place</string>
    <string name="save_button">Save</string>
    <string name="cancel">Cancel</string>
    <string name="location_dialog_max_length">0 / 50</string>
    <string name="formatting_max_length" formatted="false">%d / 50</string>
    <string name="empty_name_error_message">"Cannot save an empty name! Please enter the place name."</string>
    <string name="empty_feedback">"Cannot save an empty feedback! Please enter a valid feedback."</string>
    <string name="delete_header">Delete %s</string>
    <string name="delete_message">Are you sure you want to delete %s?</string>
    <string name="selected_place_message">%s has been selected.</string>
    <string name="declared_field">mShiftingMode</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="large_text">
        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="up">Up</string>
    <string name="username">Shehab Salah</string>
    <string name="user_email">shehabsalah25@gmail.com</string>
    <string name="address">Al Magd Street, 9th district, Al-Obour City, Cairo, Egypt.</string>
    <string name="category">Solving Problem</string>
    <string name="address_nickname">Home</string>
    <string name="m_v">mobile_visibility</string>
    <string name="e_v">email_visibility</string>
    <string name="email_setting_title">Display Personal Email</string>
    <string name="mobile_setting_title">"Display Mobile Number</string>
    <string name="email_setting_summery">Any one of your neighbors can see your personal email and send you messages.</string>
    <string name="mobile_setting_summery">Any one of your neighbors can see your personal mobile number and can call you.</string>
    <string name="logout_key">logout</string>
    <string name="logout_summery">Log out from Gerany App.</string>
    <string name="logout_intent">log_out</string>
    <string name="activity_header_user_info">Great! You’re almost done.</string>
    <string name="activity_image_user_info">complete user information image</string>
    <string name="activity_email_icon_user_info">Email address icon</string>
    <string name="activity_email_hint_user_info">Enter your personal e-mail address</string>
    <string name="activity_mobile_icon_user_info">mobile number icon</string>
    <string name="activity_mobile_hint_user_info">Enter mobile number. Ex: +20xxxx</string>
    <string name="done">DONE</string>
    <string name="email_not_valid">Please enter a valid e-mail address.</string>
    <string name="mobile_not_valid">Please enter a valid mobile number.</string>
    <string name="location_dialog_header">Location needed!</string>
    <string name="location_dialog_message">To use this feature you must open Location.</string>
    <string name="dialog_positive_button">YES</string>
    <string name="dialog_negative_button">Cancel</string>
    <string name="delete">Delete</string>
    <string name="report">Report</string>
    <string name="sample_post_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
    </string>
    <string name="post_interactions" formatted="false">%d dislikes - %d volunteers - %d donations</string>
    <string name="post_interaction_sample">35 dislikes - 3 volunteers - 45678 donations</string>
    <string name="dislike"> Dislike</string>
    <string name="volunteer"> Volunteer</string>
    <string name="donation"> Donate</string>
    <string name="feedback_title">Feedback</string>
    <string name="feedback_body_header">Why you dislike this post?</string>
    <string name="home_posts_area">There is no posts in your area.</string>
    <string name="profile_posts_area">You do not have any posts yet.</string>
    <string name="report_message" formatted="false">This %s has been reported.</string>
    <string name="profile_pic_description">User profile picture</string>
    <string name="close_profile">Close profile dialog icon</string>
    <string name="cover_description">Profile dialog cover image</string>
    <string name="call_description">Call user icon</string>
    <string name="mail_description">Send email to user icon</string>
</resources>