<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_48px"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_places"
        android:icon="@drawable/ic_person_pin_48px"
        android:title="@string/title_places" />

    <item
        android:id="@+id/navigation_post"
        android:icon="@drawable/ic_add_box_48px"
        android:title="@string/title_post" />
    <item
        android:id="@+id/navigation_add_place"
        android:icon="@drawable/ic_add_location_48px"
        android:title="@string/title_add_place" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person_48px"
        android:title="@string/title_profile" />

</menu>
