<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/profile_dialog_header_size">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@mipmap/login_bg"
            android:contentDescription="@string/cover_description"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/profile_dialog_header_size">
            <ImageView
                android:id="@+id/close_icon"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_margin="@dimen/shape_edge_padding"
                app:srcCompat="@drawable/ic_close"
                android:contentDescription="@string/close_profile"
                />
        </RelativeLayout>
    </FrameLayout>
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_picture"
        android:layout_width="@dimen/profile_dialog_image_size"
        android:layout_height="@dimen/profile_dialog_image_size"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/profile"
        app:civ_border_color="@color/appBackground"
        app:civ_border_width="2dp"
        android:layout_marginTop="@dimen/profile_dialog_pic_margin"
        android:contentDescription="@string/profile_pic_description"
        />
    <TextView
        android:id="@+id/username_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="bottom|center"
        android:textColor="@color/black_color"
        android:layout_marginTop="@dimen/shape_edge_padding"
        android:textSize="@dimen/text_large_size"
        android:textStyle="bold"
        tools:text="@string/username"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/shape_edge_x2"
        android:orientation="horizontal">
        <RelativeLayout
            android:id="@+id/call_container"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/success_color"
            >
            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_call"
                android:contentDescription="@string/call_description"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/mail_container"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            >
            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_mail"
                android:contentDescription="@string/mail_description"/>

        </RelativeLayout>

    </LinearLayout>
</LinearLayout>