<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.shehabsalah.geranyapp.views.activities.AddUserInfoActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_header_user_info"
        android:textSize="@dimen/text_large_size_plus"
        android:textColor="@color/black_color"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/shape_edge_extra_small_padding"
        android:layout_marginRight="@dimen/shape_edge_extra_small_padding"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="@dimen/shape_edge_extra_small_padding"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="@dimen/shape_edge_extra_small_padding"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        android:layout_marginStart="@dimen/shape_edge_extra_small_padding"
        android:layout_marginEnd="@dimen/shape_edge_extra_small_padding" />

    <ImageView
        android:layout_width="178dp"
        android:layout_height="188dp"
        android:src="@mipmap/almost_done_icon"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/shape_edge_extra_small_padding"
        android:layout_marginRight="@dimen/shape_edge_extra_small_padding"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="@dimen/shape_edge_extra_small_padding"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="@dimen/shape_edge_extra_small_padding"
        android:layout_marginEnd="@dimen/shape_edge_extra_small_padding"
        android:layout_marginBottom="@dimen/shape_edge_extra_small_padding"
        app:layout_constraintBottom_toTopOf="@+id/done_text_view"
        android:id="@+id/imageView2"
        app:layout_constraintVertical_bias="0.352"
        android:contentDescription="@string/activity_image_user_info"/>
    <RelativeLayout
        android:id="@+id/email_container"
        android:layout_width="@dimen/no_dp"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/shape_edge_padding"
        android:paddingLeft="@dimen/shape_edge_padding"
        android:paddingRight="@dimen/shape_edge_padding"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.0"
        android:visibility="gone"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/number_container">
        <ImageView
            android:id="@+id/email_icon"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_marginEnd="@dimen/small_margin"
            android:layout_marginTop="@dimen/small_margin"
            app:srcCompat="@drawable/ic_email"
            android:contentDescription="@string/activity_email_icon_user_info"/>
        <EditText
            android:id="@+id/edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:maxLength="50"
            android:inputType="textEmailAddress"
            android:hint="@string/activity_email_hint_user_info"
            android:layout_toEndOf="@+id/email_icon"
            android:textSize="@dimen/text_medium_size"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/number_container"
        android:layout_width="@dimen/no_dp"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/shape_edge_padding"
        android:paddingLeft="@dimen/shape_edge_padding"
        android:paddingRight="@dimen/shape_edge_padding"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/done_text_view"
        android:layout_marginLeft="8dp"
        android:visibility="gone"
        >
        <ImageView
            android:id="@+id/phone_icon"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_marginEnd="@dimen/small_margin"
            android:layout_marginTop="@dimen/small_margin"
            app:srcCompat="@drawable/ic_phone"
            android:contentDescription="@string/activity_mobile_icon_user_info"/>
        <EditText
            android:id="@+id/edit_text_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:maxLength="50"
            android:inputType="phone"
            android:hint="@string/activity_mobile_hint_user_info"
            android:layout_toEndOf="@+id/phone_icon"
            android:textSize="@dimen/text_medium_size"
            />
    </RelativeLayout>

    <TextView
        android:id="@+id/done_text_view"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginLeft="@dimen/no_dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="@dimen/no_dp"
        android:layout_marginStart="@dimen/no_dp"
        android:layout_marginEnd="@dimen/no_dp"
        android:padding="@dimen/no_dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/no_dp"
        android:text="@string/done"
        android:gravity="center"
        android:textAlignment="viewEnd"
        android:paddingEnd="@dimen/shape_edge_padding"
        android:paddingStart="@dimen/shape_edge_padding"
        android:textSize="@dimen/text_normal_size"
        android:fontFamily="sans-serif-medium"
        tools:ignore="RtlCompat"
        android:textColor="@color/white_color"
        android:background="@drawable/default_button"
         />

</android.support.constraint.ConstraintLayout>
