<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_color">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_header_height"
        android:background="@color/colorPrimary">
        <ImageView
            android:id="@+id/location_edit_icon"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_margin="@dimen/shape_edge_padding"
            app:srcCompat="@drawable/ic_edit_location_layout"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_location_dialog_header"
            android:textColor="@color/white_color"
            android:textSize="@dimen/text_large_size"
            android:layout_toEndOf="@+id/location_edit_icon"
            android:layout_centerVertical="true"
            android:fontFamily="sans-serif-medium"
            />
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_location_dialog_description"
        android:textSize="@dimen/text_large_size"
        android:paddingTop="@dimen/shape_edge_padding"
        android:paddingLeft="@dimen/shape_edge_padding"
        android:paddingRight="@dimen/shape_edge_padding"
        android:paddingBottom="@dimen/shape_edge_medium_padding"
        android:textColor="@color/black_color"
        android:fontFamily="sans-serif-medium"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/shape_edge_padding"
        android:paddingLeft="@dimen/shape_edge_padding"
        android:paddingRight="@dimen/shape_edge_padding"
        >
        <!--ToDo remove android:text-->
        <TextView
            android:id="@+id/current_location_edit_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black_light_color"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_toEndOf="@+id/edit_icon"
            android:textSize="@dimen/text_extra_small_size"
            tools:text="@string/address"
            />
        <ImageView
            android:id="@+id/edit_icon"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_marginEnd="@dimen/small_margin"
            android:layout_marginTop="@dimen/small_margin"
            app:srcCompat="@drawable/ic_mode_edit"
            android:layout_below="@+id/current_location_edit_dialog"/>
        <EditText
            android:id="@+id/edit_text_location_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:maxLength="50"
            android:layout_below="@+id/current_location_edit_dialog"
            android:layout_toEndOf="@+id/edit_icon"
            android:textSize="@dimen/text_medium_size"
            />
        <TextView
            android:id="@+id/edit_text_length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black_light_color"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_below="@+id/edit_text_location_dialog"
            android:layout_alignParentEnd="true"
            android:text="@string/location_dialog_max_length"
            android:textSize="@dimen/text_extra_small_size"
            android:paddingEnd="@dimen/shape_edge_extra_small_padding"
            android:paddingStart="@dimen/shape_edge_extra_small_padding"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_actionbar_size"
        android:layout_marginTop="@dimen/shape_edge_medium_padding_minus"
        android:paddingEnd="@dimen/shape_edge_extra_small_padding"
        android:paddingStart="@dimen/shape_edge_extra_small_padding">

        <TextView
            android:id="@+id/save_button_location_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:fontFamily="sans-serif-medium"
            android:padding="@dimen/shape_edge_extra_small_padding"
            android:text="@string/save_button"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_medium_size"
            android:layout_margin="@dimen/shape_edge_extra_small_padding"
            />

        <TextView
            android:id="@+id/cancel_button_location_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:padding="@dimen/shape_edge_extra_small_padding"
            android:text="@string/cancel_button"
            android:textSize="@dimen/text_medium_size"
            android:layout_alignBaseline="@+id/save_button_location_dialog"
            android:layout_alignBottom="@+id/save_button_location_dialog"
            android:layout_toStartOf="@+id/save_button_location_dialog" />

    </RelativeLayout>


</LinearLayout>